--- a/vercel.json
+++ b/vercel.json
@@ -4,8 +4,8 @@
         "src": "./index.js",
         "use": "@vercel/node"
     }],
-    "routes": {
+    "routes": [{
         "src": "/(.*)",
         "dest": "/"
-    }
+    }]
 }
